# sigma-evolve

./: .env.example  .gitignore  PHASE1_KNOWLEDGE_EXCHANGE_SUMMARY.md  PHASE2_KNOWLEDGE_INTEGRATION_PLAN.md  PHASE2_SUMMARY.md  PHASE3_KNOWLEDGE_EXCHANGE_PLAN.md  PHASE3_KNOWLEDGE_EXCHANGE_SUMMARY.md  PHASE4_KNOWLEDGE_EXCHANGE_PLAN.md  PHASE5_SUMMARY.md  README.md  agents_architecture_analysis.md  deploy.sh  feature_design_document.md  pyproject.toml  run_ingest.py  test_mcp_tools.py
digitalocean/: README.md  app-spec.yaml  deploy.sh  parameters.dev.yaml  parameters.production.yaml  parameters.staging.yaml
docker/: Dockerfile  docker-compose.yaml
frontend/: PHASE1_SUMMARY.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useDashboard.ts
frontend/src/stores/: dashboardStore.ts
frontend/src/types/: index.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/postgres_rebuild/: GRAPHITI_INTEGRATION_SUMMARY.md  README.md  rebuild_database.py  schema_code_snapshots.sql  schema_cross_project_learnings.sql  schema_experiments.sql  schema_learned_patterns.sql  schema_projects.sql  schema_proposals.sql  schema_worker_stats.sql  test_data.py
src/: requirements.in  requirements.txt
src/openmemory/: config.json  default_config.json  main.py  openmemory.db-shm  openmemory.db-wal
src/openmemory/app/: agent_config.py  database.py  log_broadcaster.py  mcp_server.py  models.py  (+1 more)
test/: conflict_integration_test.py  conflict_resolution_test.py  conflict_scenarios_test.py  knowledge_exchange_integration_test.py  knowledge_exchange_test.py  knowledge_reception_test.py  test_git_integration.py  test_verify_ingestion.py
(+53 files in other folders)
